Добавила обработку ошибок

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   </header>
  
   <!-- Товары -->
+  <span class="error"></span>
+   
   <main class="main-container">
     <section class="good-container">
       
